# swig-gauge-test

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  coordinate.cpp  coordinate.h
swig/: CMakeLists.txt
swig/java/: CMakeLists.txt  example.i
swig/javascript/: CMakeLists.txt  example.i
swig/python/: CMakeLists.txt  example.i
test/: run_test.bat
test/java/: .gitignore
test/java/env/default/: default.properties
test/java/src/test/java/: Coordinate.java  DllManager.java  StepImplementation.java  jvcoordinate.java  jvcoordinateJNI.java
test/javascript/: .gitignore  package-lock.json  package.json
test/javascript/env/default/: default.properties
test/javascript/libs/: .gitignore  README.md  binding.gyp  coordinate.cpp  coordinate.h  exampleJAVASCRIPT_wrap.cxx
test/javascript/tests/: step_implementation.js
test/python/: .gitignore
test/python/env/default/: default.properties
test/python/libs/: _pycoordinate.pyd  pycoordinate.lib  pycoordinate.py
test/python/step_impl/: step_impl.py
test/specs/: example.spec
