CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(ctest)

SET(CXX_STANDARD 17)
SET(LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(JAVA_OUTPUT ${CMAKE_BINARY_DIR}/langs/java)
SET(JAVASCRIPT_OUTPUT ${CMAKE_BINARY_DIR}/langs/javascript)
SET(PYTHON_OUTPUT ${CMAKE_BINARY_DIR}/langs/python)
SET(LIB_OUTPUT_DIR ${CMAKE_BINARY_DIR}/install)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/swig)