CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(libcoordinate)

SET(LIB_SRC coordinate.cpp)

ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${LIB_SRC})
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_SRC})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX ${LIB_OUTPUT_DIR} CACHE PATH "Install" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

INSTALL(FILES coordinate.h DESTINATION include)
INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION bin)
INSTALL(TARGETS ${PROJECT_NAME}_static ARCHIVE DESTINATION lib)