CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(jvcoordinate)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(JNI REQUIRED)
FIND_PACKAGE(Java REQUIRED)

INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIB_DIR})
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET_PROPERTY(SOURCE example.i PROPERTY CPLUSPLUS ON)

SET(CMAKE_SWIG_OUTDIR ${JAVA_OUTPUT})
SET(SWIG_OUTFILE_DIR ${JAVA_OUTPUT})

SWIG_ADD_LIBRARY(
    ${PROJECT_NAME}
    LANGUAGE java
    SOURCES example.i
)

SWIG_LINK_LIBRARIES(${PROJECT_NAME} libcoordinate)