CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(jscoordinate)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

# 不知道如何找到node的相关路径，先写死
SET(NODE_DIR C:/Users/xxx/AppData/Local/node-gyp/Cache/20.10.0)
SET(NODE_H_DIR ${NODE_DIR}/include/node)
SET(NODE_LIB ${NODE_DIR}/x64/node.lib)

INCLUDE_DIRECTORIES(${NODE_H_DIR})
INCLUDE_DIRECTORIES(${LIB_DIR})
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET_PROPERTY(SOURCE example.i PROPERTY CPLUSPLUS ON)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
SET(CMAKE_SWIG_FLAGS -node)
SET(CMAKE_SWIG_OUTDIR ${JAVASCRIPT_OUTPUT})
SET(SWIG_OUTFILE_DIR ${JAVASCRIPT_OUTPUT})

SWIG_ADD_LIBRARY(
    ${PROJECT_NAME}
    LANGUAGE javascript
    SOURCES example.i
)

SWIG_LINK_LIBRARIES(${PROJECT_NAME} libcoordinate ${NODE_LIB})