CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(pycoordinate)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(Python3 REQUIRED)

# 高版本的可以直接获取Python3_INCLUDE_DIRS和Python3_LIBRARIES
GET_FILENAME_COMPONENT(PYTHON3_DIR ${Python3_EXECUTABLE} DIRECTORY)
SET(PYTHON3_H_DIR ${PYTHON3_DIR}/include)
MESSAGE(STATUS "PYTHON3_H_DIR: " ${PYTHON3_H_DIR})
SET(PYTHON3_LIB ${PYTHON3_DIR}/libs/python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}.lib)
MESSAGE(STATUS "PYTHON3_LIB: " ${PYTHON3_LIB})

INCLUDE_DIRECTORIES(${PYTHON3_H_DIR})
INCLUDE_DIRECTORIES(${LIB_DIR})
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET_PROPERTY(SOURCE example.i PROPERTY CPLUSPLUS ON)

SET(CMAKE_SWIG_OUTDIR ${PYTHON_OUTPUT})
SET(SWIG_OUTFILE_DIR ${PYTHON_OUTPUT})

SWIG_ADD_LIBRARY(
    ${PROJECT_NAME}
    LANGUAGE python
    SOURCES example.i
)

SWIG_LINK_LIBRARIES(${PROJECT_NAME} libcoordinate ${PYTHON3_LIB})